--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Khula:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Khula', sans-serif;
+  font-family: 'Khula', 'Source Sans Pro', sans-serif;
   background-color: #ffffff;
 }
 
